libraries/ckit/regression/valid-programs/a5.c
f() {
 int i = 1;
}

main () {
  int i;

  i = f && i; 
}
