libraries/ckit/regression/invalid-programs/r9.c
f() {
 int i = 1;
}

main () {
  float j, k;
  int i;

  i = j & k; 
}
